* Improvement: Theme option style presets will now apply corresponding default theme logo to fit selected design, if the user hasn't configured a custom logo of their own.
* Improvement: Admin code editors now use WordPress's implementation of CodeMirror editor with coding help and error hints, introduced in WordPress 4.9.
* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Fixed: When text logo is used with Agent base and dark-colored header, header text was not colored properly so it could be seen.
* Fixed: Custom layout builder elements are now hooked to an action `themeblvd_element_{$type}` instead of just `themeblvd_{$type}`, to not conflict with filtering standard output of elements.
* Fixed: Light logo text color (for non-image main site logo) not getting applied with dark header backgrounds; bug was present in Super User, Executive, Entrepreneur theme bases.
* Fixed: Tab deep linking not working, when enabled from child theme (see [tutorial](http://dev.themeblvd.com/tutorial/tab-deeplinking)).
* Fixed: Post ID browser modal window not closing in admin when selecting post.
* Fixed: Social contact icons not showing in correct color on transparent header in some cases, with Super User and Executive theme bases.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* Removed: No more html5shiv for HTML5 compatibility with IE8.
* Removed: The deprecated "featured" areas (as of framework 2.5), using `themeblvd_featured_*` action hooks have been completely removed.
* Updated: FontAwesome to 5.0.1.
* Updated: Chart.js to 2.7.1.
* Updated: easyPieChart to 2.1.6.
* Updated: Isotope to 3.0.4.

* **Important General Notes:**