@@ -6994,50 +6994,43 @@ body.mobile .tb-bg-video {
 /* General */
 .tweeple-feed ul.tweets {
     list-style: none;
-    margin-right: 0;
+    margin-left: 0;
 }
 .tweeple-feed li.tweet {
 	margin-bottom: 15px;
-	padding-right: 35px;
+	padding-left: 35px;
 	position: relative;
 }
-.tweeple-feed li.tweet:before {
-	content: "\f099";
-	font-family: "FontAwesome";
+.tweeple-feed li.tweet > .fa-twitter {
 	font-size: 20px;
 	line-height: 1em;
 	position: absolute;
 	top: 5px;
-	right: 0;
-	text-rendering: auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	left: 0;
 }
 .tweeple-feed .tweet-time a {
-    color: #999999;
+	color: #999999;
     color: rgba(26,26,26,.4);
     font-size: 11px;
 }
 
 /* "Tweet" Builder Element */
 .tb-tweet-wrapper {
-	position: relative;
-}
-.tb-tweet-wrapper.has-icon {
-	padding-right: 70px;
+	margin: 0 auto;
+	max-width: 900px;
+	text-align: center;
 }
 .tb-tweet-wrapper .tweet-icon {
-	display: block;
 	font-size: 64px;
-	line-height: 50px;
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 50px;
+	line-height: 1;
+	margin-bottom: 20px;
 }
 .tb-tweet-wrapper .tweet-content {
 	font-size: 24px;
-	line-height: 1.25;
+	line-height: 1.3;
+}
+.tb-tweet-wrapper .tweet-meta {
+	margin-top: 10px;
 }
 
 /* =WPML Bridge
