@@ -6990,17 +6990,12 @@ body.mobile .tb-bg-video {
 	padding-left: 35px;
 	position: relative;
 }
-.tweeple-feed li.tweet:before {
-	content: "\f099";
-	font-family: "FontAwesome";
+.tweeple-feed li.tweet > .fa-twitter {
 	font-size: 20px;
 	line-height: 1em;
 	position: absolute;
 	top: 5px;
 	left: 0;
-	text-rendering: auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 }
 .tweeple-feed .tweet-time a {
 	color: #999999;
@@ -7010,23 +7005,21 @@ body.mobile .tb-bg-video {
 
 /* "Tweet" Builder Element */
 .tb-tweet-wrapper {
-	position: relative;
-}
-.tb-tweet-wrapper.has-icon {
-	padding-left: 70px;
+	margin: 0 auto;
+	max-width: 900px;
+	text-align: center;
 }
 .tb-tweet-wrapper .tweet-icon {
-	display: block;
 	font-size: 64px;
-	line-height: 50px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 50px;
+	line-height: 1;
+	margin-bottom: 20px;
 }
 .tb-tweet-wrapper .tweet-content {
 	font-size: 24px;
-	line-height: 1.25;
+	line-height: 1.3;
+}
+.tb-tweet-wrapper .tweet-meta {
+	margin-top: 10px;
 }
 
 /* =WPML Bridge
